--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,17 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^8.1",
         "botman/botman": "~2.0 || ~3.0",
-        "guzzlehttp/guzzle": "~6.0 || ^7.0.1",
-        "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/contracts": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "illuminate/support": "^9.0",
+        "illuminate/contracts": "^9.0",
+        "illuminate/console": "^9.0",
         "thecodingmachine/discovery": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.5 || ^4.0 || ^5.0 || ^6.0"
+        "orchestra/testbench": "^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -48,5 +48,10 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "cs": "php-cs-fixer fix"
+    },
+    "config": {
+        "allow-plugins": {
+            "thecodingmachine/discovery": true
+        }
     }
 }
