--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/support": "^9.0",
         "illuminate/contracts": "^9.0",
-        "illuminate/console": "^9.0",
-        "thecodingmachine/discovery": "^1.2"
+        "illuminate/console": "^9.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
